feat!: publishing using new Central API:s
BREAKING CHANGE: Removing nexusUsernameEnvOrProp, nexusPasswordEnvOrProp and nexusStagingProfileEnvOrProp and now using properties from vanniktech/gradle-maven-publish-plugin

--- a/src/main/groovy/se.bjurr.gradle.bundle-jar-gr8.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-jar-gr8.gradle
@@ -20,8 +20,5 @@ allprojects {
 }
 
 releaseExtension {
-	releasePostTasks = [
-		"publish",
-		"closeAndReleaseStagingRepositories",
-	]
+	releasePostTasks = ["publishToMavenCentral",]
 }
