--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
  */
 plugins {
 	id "groovy-gradle-plugin"
-	id "io.github.gradle-nexus.publish-plugin" version "2.0.0" apply false
+	id "com.vanniktech.maven.publish.base" version "0.35.0" apply false
 	id "com.gradle.plugin-publish" version "2.0.0" apply false
 	id "se.bjurr.gitchangelog.git-changelog-gradle-plugin" version "3.1.1" apply false
 	id "com.diffplug.spotless" version "8.0.0"
@@ -16,7 +16,7 @@ plugins {
 dependencies {
 	implementation "com.gradleup.shadow:shadow-gradle-plugin:9.2.2"
 	implementation "com.gradleup:gr8-plugin:0.11.2"
-	implementation "io.github.gradle-nexus:publish-plugin:2.0.0"
+	implementation "com.vanniktech:gradle-maven-publish-plugin:0.35.0"
 	implementation "com.gradle.publish:plugin-publish-plugin:2.0.0"
 	implementation "se.bjurr.gitchangelog:git-changelog-gradle-plugin:3.1.1"
 	implementation "se.bjurr.gradle.update-versions:se.bjurr.gradle.update-versions.gradle.plugin:1.5.7"
@@ -62,7 +62,6 @@ tasks.named("release") {
 		"publishToMavenLocal",
 		'gitChangelog',
 		'commitChangelogTask',
-		"publish",
-		"closeAndReleaseStagingRepositories"
+		"publishToMavenCentral",
 	]
 }
