--- a/src/main/groovy/se.bjurr.gradle.bundle-command-shadow.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-command-shadow.gradle
@@ -14,7 +14,6 @@ plugins {
 releaseExtension {
 	releasePostTasks = [
 		"publishNpm",
-		"publish",
-		"closeAndReleaseStagingRepositories",
+		"publishToMavenCentral",
 	]
 }
