--- a/src/main/groovy/se.bjurr.gradle.bundle-gradle-binaryplugin.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-gradle-binaryplugin.gradle
@@ -26,8 +26,7 @@ dependencies {
 
 releaseExtension {
 	releasePostTasks = [
-		"publish",
-		"closeAndReleaseStagingRepositories",
+		"publishToMavenCentral",
 		"publishPlugins"
 	]
 }
