--- a/src/main/groovy/se.bjurr.gradle.bundle-jar-shadow.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-jar-shadow.gradle
@@ -20,8 +20,5 @@ allprojects {
 }
 
 releaseExtension {
-	releasePostTasks = [
-		"publish",
-		"closeAndReleaseStagingRepositories",
-	]
+	releasePostTasks = ["publishToMavenCentral",]
 }
