--- a/src/main/groovy/se.bjurr.gradle.sign.gradle
+++ b/src/main/groovy/se.bjurr.gradle.sign.gradle
@@ -26,7 +26,7 @@ project.plugins.apply 'signing'
 signing {
 
 	required {
-		gradle.taskGraph.hasTask("closeAndReleaseStagingRepositories")
+		gradle.taskGraph.hasTask("publishToMavenCentral")
 	}
 
 	project.afterEvaluate {
