chore(release): 2.0.0 [GRADLE SCRIPT]

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-#Sun Nov 09 09:03:15 CET 2025
+#Sun Jan 11 10:22:31 CET 2026
 description=Gradle Conventions.
 group=se.bjurr.gradle
-version=1.6.0-SNAPSHOT
+version=2.0.0
