--- a/src/main/groovy/se.bjurr.gradle.bundle-command-gr8.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-command-gr8.gradle
@@ -14,6 +14,6 @@ plugins {
 releaseExtension {
 	releasePostTasks = [
 		"publishNpm",
-		"publishToMavenCentral",
+		"publishAndReleaseToMavenCentral",
 	]
 }
