--- a/src/main/groovy/se.bjurr.gradle.bundle-gradle-binaryplugin.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-gradle-binaryplugin.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 releaseExtension {
 	releasePostTasks = [
-		"publishToMavenCentral",
+		"publishAndReleaseToMavenCentral",
 		"publishPlugins"
 	]
 }
