--- a/src/main/groovy/se.bjurr.gradle.bundle-jar-gr8.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-jar-gr8.gradle
@@ -20,5 +20,5 @@ allprojects {
 }
 
 releaseExtension {
-	releasePostTasks = ["publishToMavenCentral",]
+	releasePostTasks = ["publishAndReleaseToMavenCentral",]
 }
