chore(release): Updating changelog with 2.0.1 [GRADLE SCRIPT]

--- a/src/main/groovy/se.bjurr.gradle.bundle-jar-gr8.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-jar-gr8.gradle
@@ -20,5 +20,7 @@ allprojects {
 }
 
 releaseExtension {
-	releasePostTasks = ["publishAndReleaseToMavenCentral",]
+	releasePostTasks = [
+		"publishAndReleaseToMavenCentral",
+	]
 }
