--- a/src/main/groovy/se.bjurr.gradle.bundle-jar-shadow.gradle
+++ b/src/main/groovy/se.bjurr.gradle.bundle-jar-shadow.gradle
@@ -20,5 +20,7 @@ allprojects {
 }
 
 releaseExtension {
-	releasePostTasks = ["publishAndReleaseToMavenCentral",]
+	releasePostTasks = [
+		"publishAndReleaseToMavenCentral",
+	]
 }
